Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13431

Regression: cannot deploy release builds on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • Qt Creator 3.3.0-rc1
    • Qt Creator 3.3.0-beta1
    • Android Support
    • None
    • Qt Creator 3.2.82 (3.3.0-rc1-enterprise)
      Based on Qt 5.4.0 (GCC 4.6.1, 64 bit)
      Built on Nov 17 2014 at 04:29:14
      From revision 4d3d8bb730
    • 9411cd2db367ddd1e5ce1afd3b50758e6bd731df, 657797f7a06de9c5297952896421fc94a360b848

      I disabled Gradle because of QTCREATORBUG-13311, reconfigured my project and got this:

      Running command "/home/micurtis/dev/android-sdk-linux/platform-tools/adb -s 071fd85400d2c1a8  install -r /home/micurtis/dev/qtquickenterprisecontrols-flat/examples/quick/enterprise/controls/flat/android-build//bin/QtApp-debug.apk"
      can't find '/home/micurtis/dev/qtquickenterprisecontrols-flat/examples/quick/enterprise/controls/flat/android-build//bin/QtApp-debug.apk' to install
      Installing to device failed!
      15:25:31: The process "/home/micurtis/dev/qt5.4-android-release/qtbase/bin/androiddeployqt" exited with code 16.
      Error while building/deploying project flat (kit: Android for armeabi-v7a (GCC 4.8, Qt 5.4.0)-Qt 5.4.0 (qt5.4-android-release))
      When executing step "Deploy to Android device"
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            mitch_curtis Mitch Curtis
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes